Wed Sep  7 15:25:02 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* lib/active_record/connection_adapters/mysql_adapter.rb: LRU cache
	  keys are per process id.
	* lib/active_record/connection_adapters/sqlite_adapter.rb: ditto

* Support bulk change_table in mysql2 adapter, as well as the mysql one. [Jon Leighton]

* If multiple parameters are sent representing a date, and some are blank, the
resulting object is nil. In previous releases those values defaulted to 1. This
only affects existing but blank parameters, missing ones still raise an error.
[Akira Matsuda]

* ActiveRecord::Base.establish_connection now takes a string that contains
a URI that specifies the connection configuration.  For example:

    ActiveRecord::Base.establish_connection 'postgres://localhost/foo'

* Active Record's dynamic finder will now raise the error if you passing in less number of arguments than what you call in method signature.

  So if you were doing this and expecting the second argument to be nil:

    User.find_by_username_and_group("sikachu")

  You'll now get `ArgumentError: wrong number of arguments (1 for 2).` You'll then have to do this:

    User.find_by_username_and_group("sikachu", nil)

  [Prem Sichanugrist]

*Rails 3.1.0 (unreleased)*

* Add a proxy_association method to association proxies, which can be called by association
  extensions to access information about the association. This replaces proxy_owner etc with
  proxy_association.owner.

  [Jon Leighton]

* ActiveRecord::MacroReflection::AssociationReflection#build_record has a new method signature.

  Before: def build_association(*options)
  After:  def build_association(*options, &block)

  Users who are redefining this method to extend functionality should ensure that the block is
  passed through to ActiveRecord::Base#new.

  This change is necessary to fix https://github.com/rails/rails/issues/1842.

  [Jon Leighton]
